@@ -1,0 +1,50 @@
+[
+            // See: http://www.qamus.org/transliteration.htm
+			["A", "\u0627"], // ARABIC LETTER ALEF
+			["b", "\u0628"], // ARABIC LETTER BEH
+			["p", "\u0629"], // ARABIC LETTER TEH MARBUTA
+			["t", "\u062A"], // ARABIC LETTER TEH
+            ["v", "\u062B"], // ARABIC LETTER THEH
+			["j", "\u062C"], // ARABIC LETTER JEEM
+			["H", "\u062D"], // ARABIC LETTER HAH 
+			["x", "\u062E"], // ARABIC LETTER DAL
+			["d", "\u062F"], // ARABIC LETTER DAL
+			["*", "\u0630"], // ARABIC LETTER THAL
+			["r", "\u0631"], // ARABIC LETTER REH
+			["z", "\u0632"], // ARABIC LETTER ZAIN
+			["s", "\u0633"], // ARABIC LETTER SEEN
+			["$", "\u0634"], // ARABIC LETTER SHEEN
+			["S", "\u0635"], // ARABIC LETTER SAD
+			["D", "\u0636"], // ARABIC LETTER DAD
+			["T", "\u0637"], // ARABIC LETTER TAH
+			["Z", "\u0638"], // ARABIC LETTER ZAH
+			["E", "\u0639"], // ARABIC LETTER AIN
+            ["g", "\u063A"], // ARABIC LETTER GHAIN
+            ["f", "\u0641"], // ARABIC LETTER FEH
+            ["q", "\u0642"], // ARABIC LETTER QAF
+            ["k", "\u0643"], // ARABIC LETTER KAF
+            ["l", "\u0644"], // ARABIC LETTER LAM
+            ["m", "\u0645"], // ARABIC LETTER MEEM
+            ["n", "\u0646"], // ARABIC LETTER NOON
+            ["h", "\u0647"], // ARABIC LETTER HEH
+            ["w", "\u0648"], // ARABIC LETTER WAW
+            ["Y", "\u0649"], // ARABIC LETTER ALEF MAKSURA
+            ["y", "\u064A"], // ARABIC LETTER YEH
+            ["'", "\u0621"], // ARABIC LETTER HAMZA
+            [">", "\u0623"], // ARABIC LETTER ALEF WITH HAMZA ABOVE
+            ["<", "\u0625"], // ARABIC LETTER ALEF WITH HAMZA BELOW
+            ["&", "\u0624"], // ARABIC LETTER WAW WITH HAMZA ABOVE
+            ["}", "\u0626"], // ARABIC LETTER YEH WITH HAMZA ABOVE
+            ["|", "\u0622"], // ARABIC LETTER ALEF WITH MADDA ABOVE
+            ["{", "\u0671"], // ARABIC LETTER ALEF WASLA
+            ["`", "\u0670"], // ARABIC LETTER SUPERSCRIPT ALEF
+            ["a", "\u064E"], // ARABIC FATHA
+            ["u", "\u064F"], // ARABIC DAMMA
+            ["i", "\u0650"], // ARABIC KASRA
+            ["F", "\u064B"], // ARABIC FATHATAN
+            ["N", "\u064C"], // ARABIC DAMMATAN
+            ["K", "\u064D"], // ARABIC KASRATAN
+            ["~", "\u0651"], // ARABIC SHADDA
+            ["o", "\u0652"], // ARABIC SUKUN
+            ["_", "\u0640"], // ARABIC TATWEEL
+			];
