@@ -1,0 +1,257 @@
+<!DOCTYPE html>
+<!-- Software License is MIT and is in a comment at the bottom of this file. -->
+<html lang='en'>
+<head>
+	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
+
+	<title>Type and Replace: Buckwalter Inverse Romanization of Arabic
+
+</title>
+</head>
+<body onload="setUp()" style="font-family: times">
+	<!-- We use times because Courier font does not display left half ring and right half ring correctly. It confuses them.-->
+	<h1>Type and Replace: Buckwalter Inverse Romanization of Arabic
+
+</h1>
+	<p>This is a page making it easier to type characters required for typing Buckwalter Inverse Romanization of Arabic
+
+. This page is intended to be useful when a person wants to type Buckwalter Inverse Romanization of Arabic
+
+ but does not have the correct keyboard setup. When you do not have a special keyboard layout, you can come to this page, read the legend on this page, type text in the textbox, and press the button labelled "Replace".</p>	
+	<p>This page can be downloaded, and after downloading can run on a computer even without internet.</p>
+	
+	<h2>Type text</h2>
+	<div>
+		<label for="userInputBox">Type Text into following box:</label>
+	</div>
+	<textarea id="userInputBox" oninput="reactToUserTypingCharacter()" cols="50" rows="10" aria-live="assertive" style="font-family: times; font-size: large; padding: 0.5em" dir="rtl"></textarea>
+	<h2>Replace:</h2>
+	<button onclick="transformCharacters()">Replace</button>
+
+	<input type="checkbox" id="normalizeLock" name="normalizeLock" onclick="updateNormalizationLock();" checked> <label for="normalizeLock">Replace as you type.</label>
+
+	<!-- The following legend will be populated when the script runs. -->
+	<div id="legend" style="font-family: times; font-size: x-large">
+
+	</div>
+
+	<!-- The following will be populated with any extra information for our users. -->
+	<button onclick="viewExcelFormula()">Get Spreadsheet Formula to do this.</button>
+	<button onclick="viewPythonFormula()">Get Terminal Command to do this.</button>
+
+	<div id="extraGoodies" style="font-family: times; font-size: large">
+	</div>
+
+	<footer>
+		<p><a style="font-size: x-small; margin-left: 5em" href="https://github.com/elsanussi-s-mneina/type-and-replace-html-js">Get source code and documentation: v1.21, (2021-03-03). Made by Elsanussi Mneina</a></p>
+	</footer>  
+
+	<script>
+		normalizationLock = false;
+		
+		
+		replacements = 
+			[
+            // See: http://www.qamus.org/transliteration.htm
+			["A", "\u0627"], // ARABIC LETTER ALEF
+			["b", "\u0628"], // ARABIC LETTER BEH
+			["p", "\u0629"], // ARABIC LETTER TEH MARBUTA
+			["t", "\u062A"], // ARABIC LETTER TEH
+            ["v", "\u062B"], // ARABIC LETTER THEH
+			["j", "\u062C"], // ARABIC LETTER JEEM
+			["H", "\u062D"], // ARABIC LETTER HAH 
+			["x", "\u062E"], // ARABIC LETTER DAL
+			["d", "\u062F"], // ARABIC LETTER DAL
+			["*", "\u0630"], // ARABIC LETTER THAL
+			["r", "\u0631"], // ARABIC LETTER REH
+			["z", "\u0632"], // ARABIC LETTER ZAIN
+			["s", "\u0633"], // ARABIC LETTER SEEN
+			["$", "\u0634"], // ARABIC LETTER SHEEN
+			["S", "\u0635"], // ARABIC LETTER SAD
+			["D", "\u0636"], // ARABIC LETTER DAD
+			["T", "\u0637"], // ARABIC LETTER TAH
+			["Z", "\u0638"], // ARABIC LETTER ZAH
+			["E", "\u0639"], // ARABIC LETTER AIN
+            ["g", "\u063A"], // ARABIC LETTER GHAIN
+            ["f", "\u0641"], // ARABIC LETTER FEH
+            ["q", "\u0642"], // ARABIC LETTER QAF
+            ["k", "\u0643"], // ARABIC LETTER KAF
+            ["l", "\u0644"], // ARABIC LETTER LAM
+            ["m", "\u0645"], // ARABIC LETTER MEEM
+            ["n", "\u0646"], // ARABIC LETTER NOON
+            ["h", "\u0647"], // ARABIC LETTER HEH
+            ["w", "\u0648"], // ARABIC LETTER WAW
+            ["Y", "\u0649"], // ARABIC LETTER ALEF MAKSURA
+            ["y", "\u064A"], // ARABIC LETTER YEH
+            ["'", "\u0621"], // ARABIC LETTER HAMZA
+            [">", "\u0623"], // ARABIC LETTER ALEF WITH HAMZA ABOVE
+            ["<", "\u0625"], // ARABIC LETTER ALEF WITH HAMZA BELOW
+            ["&", "\u0624"], // ARABIC LETTER WAW WITH HAMZA ABOVE
+            ["}", "\u0626"], // ARABIC LETTER YEH WITH HAMZA ABOVE
+            ["|", "\u0622"], // ARABIC LETTER ALEF WITH MADDA ABOVE
+            ["{", "\u0671"], // ARABIC LETTER ALEF WASLA
+            ["`", "\u0670"], // ARABIC LETTER SUPERSCRIPT ALEF
+            ["a", "\u064E"], // ARABIC FATHA
+            ["u", "\u064F"], // ARABIC DAMMA
+            ["i", "\u0650"], // ARABIC KASRA
+            ["F", "\u064B"], // ARABIC FATHATAN
+            ["N", "\u064C"], // ARABIC DAMMATAN
+            ["K", "\u064D"], // ARABIC KASRATAN
+            ["~", "\u0651"], // ARABIC SHADDA
+            ["o", "\u0652"], // ARABIC SUKUN
+            ["_", "\u0640"], // ARABIC TATWEEL
+			];
+
+		;
+
+		function createSpreadsheetFormula()
+		{
+			var extraGoodies = document.getElementById("extraGoodies");
+
+			var spreadsheetFormula = "B2";
+
+			for (var i = 0; i < replacements.length; i++)
+			{
+				spreadsheetFormula = "SUBSTITUTE(" + spreadsheetFormula + ", \"" + replacements[i][0] + "\", \"" + replacements[i][1] + "\")";
+			}
+
+			extraGoodies.innerHTML = "<h3>Equivalent Spreadsheet Formula</h3><p>The worksheet (Excel, LibreOffice) formula for converting text from cell B2 is =" + spreadsheetFormula + "</p>";
+		}
+
+
+		function encodeUnicodeString(aString)
+		{
+			outputString = "";
+			for (var i = 0; i < aString.length; i++)
+			{
+				var unicodeValueString = aString.codePointAt(i).toString(16);
+
+				while (unicodeValueString.length < 4)
+				{
+					unicodeValueString = "0" + unicodeValueString;
+				}
+				outputString += "\\u" + unicodeValueString;
+			}
+
+			return outputString;
+		}
+
+		function createPythonFormula()
+		{
+			var pythonFormula = ""
+
+			for (var i = 0; i < replacements.length; i++)
+			{
+				pythonFormula = pythonFormula + ".replace( \\\"" + encodeUnicodeString(replacements[i][0]) + "\\\", \\\"" + encodeUnicodeString(replacements[i][1]) + "\\\")";
+			}
+
+			pythonFormula = "import sys; print(sys.stdin.read()" + pythonFormula + ")";
+			var terminalFormula = "python3 -c \"" + pythonFormula + "\"" + " < ./inputFile.txt > ./outputFile.txt"
+			extraGoodies.innerHTML = "<h3>Equivalent Terminal Command using Python 3</h3><p>" + terminalFormula + "</p>";
+
+		}
+
+		function viewExcelFormula()
+		{
+			createSpreadsheetFormula();
+		}
+
+		function viewPythonFormula()
+		{
+			createPythonFormula();
+		}
+
+		function setUp()
+		{
+			setUpLegend();
+			// The following call ensures that the
+			// checkbox and normalization lock
+			// do not become out of sync after a page refresh.
+			updateNormalizationLock();
+		}
+
+		// Places an explanation of what characters 
+		// change when normalization occurs.
+		// It places it as a legend the user can read.
+		function setUpLegend()
+		{
+			var legend = document.getElementById("legend");
+
+			var legendMarkup = "<h3>Legend</h3><ul>";
+
+			for (var i = 0; i < replacements.length; i++)
+			{
+				legendMarkup += "\n<li>" + replacements[i][0] + " becomes " + replacements[i][1] + "</li>";
+			}
+
+			legend.innerHTML = legendMarkup;
+		}
+
+		function transformCharacters()
+		{
+			var oldInput = document.getElementById("userInputBox").value;
+		
+			var newInput = "";
+			var replacedCurrentChar = false;
+			for (var i = 0; i < oldInput.length; i++)
+			{
+				replacedCurrentChar = false;
+				for (var j = 0; j < replacements.length && !replacedCurrentChar; j++)					
+				{
+					if (oldInput.substring(i, i + replacements[j][0].length) == replacements[j][0])
+					{
+						newInput += replacements[j][1];
+						i += replacements[j][0].length; // Skip as many characters as we read in.
+						replacedCurrentChar = true;
+					}
+				}
+				if (!replacedCurrentChar)
+				{
+					newInput += oldInput.charAt(i);
+				}
+			}
+			document.getElementById("userInputBox").value = newInput;
+		
+		}
+
+		// Some users may prefer seeing the characters change as they type.
+		// This function along with a checkbox allow this behaviour.
+		function updateNormalizationLock()
+		{
+			normalizationLock = document.getElementById("normalizeLock").checked;
+		}
+
+		function reactToUserTypingCharacter()
+		{
+			if (normalizationLock)
+			{
+				transformCharacters();
+			}
+		}
+	</script>
+</body>
+</html>
+
+<!--
+MIT License
+
+Copyright (c) 2021 Elsanussi S. Mneina
+
+Permission is hereby granted, free of charge, to any person obtaining a copy
+of this software and associated documentation files (the "Software"), to deal
+in the Software without restriction, including without limitation the rights
+to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
+copies of the Software, and to permit persons to whom the Software is
+furnished to do so, subject to the following conditions:
+
+The above copyright notice and this permission notice shall be included in all
+copies or substantial portions of the Software.
+
+THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
+AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
+OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
+SOFTWARE.
+-->
