@@ -1,0 +1,50 @@
+[
+            // See: http://www.qamus.org/transliteration.htm
+			["\u0627", "A"], // ARABIC LETTER ALEF
+			["\u0628", "b"], // ARABIC LETTER BEH
+			["\u0629", "p"], // ARABIC LETTER TEH MARBUTA
+			["\u062A", "t"], // ARABIC LETTER TEH
+            ["\u062B", "v"], // ARABIC LETTER THEH
+			["\u062C", "j"], // ARABIC LETTER JEEM
+			["\u062D", "H"], // ARABIC LETTER HAH 
+			["\u062E", "x"], // ARABIC LETTER DAL
+			["\u062F", "d"], // ARABIC LETTER DAL
+			["\u0630", "*"], // ARABIC LETTER THAL
+			["\u0631", "r"], // ARABIC LETTER REH
+			["\u0632", "z"], // ARABIC LETTER ZAIN
+			["\u0633", "s"], // ARABIC LETTER SEEN
+			["\u0634", "$"], // ARABIC LETTER SHEEN
+			["\u0635", "S"], // ARABIC LETTER SAD
+			["\u0636", "D"], // ARABIC LETTER DAD
+			["\u0637", "T"], // ARABIC LETTER TAH
+			["\u0638", "Z"], // ARABIC LETTER ZAH
+			["\u0639", "E"], // ARABIC LETTER AIN
+            ["\u063A", "g"], // ARABIC LETTER GHAIN
+            ["\u0641", "f"], // ARABIC LETTER FEH
+            ["\u0642", "q"], // ARABIC LETTER QAF
+            ["\u0643", "k"], // ARABIC LETTER KAF
+            ["\u0644", "l"], // ARABIC LETTER LAM
+            ["\u0645", "m"], // ARABIC LETTER MEEM
+            ["\u0646", "n"], // ARABIC LETTER NOON
+            ["\u0647", "h"], // ARABIC LETTER HEH
+            ["\u0648", "w"], // ARABIC LETTER WAW
+            ["\u0649", "Y"], // ARABIC LETTER ALEF MAKSURA
+            ["\u064A", "y"], // ARABIC LETTER YEH
+            ["\u0621", "'"], // ARABIC LETTER HAMZA
+            ["\u0623", ">"], // ARABIC LETTER ALEF WITH HAMZA ABOVE
+            ["\u0625", "<"], // ARABIC LETTER ALEF WITH HAMZA BELOW
+            ["\u0624", "&"], // ARABIC LETTER WAW WITH HAMZA ABOVE
+            ["\u0626", "}"], // ARABIC LETTER YEH WITH HAMZA ABOVE
+            ["\u0622", "|"], // ARABIC LETTER ALEF WITH MADDA ABOVE
+            ["\u0671", "{"], // ARABIC LETTER ALEF WASLA
+            ["\u0670", "`"], // ARABIC LETTER SUPERSCRIPT ALEF
+            ["\u064E", "a"], // ARABIC FATHA
+            ["\u064F", "u"], // ARABIC DAMMA
+            ["\u0650", "i"], // ARABIC KASRA
+            ["\u064B", "F"], // ARABIC FATHATAN
+            ["\u064C", "N"], // ARABIC DAMMATAN
+            ["\u064D", "K"], // ARABIC KASRATAN
+            ["\u0651", "~"], // ARABIC SHADDA
+            ["\u0652", "o"], // ARABIC SUKUN
+            ["\u0640", "_"], // ARABIC TATWEEL
+			];
