@@ -41,3 +41,4 @@ At the same time the following orthographies have been added: French, Spanish or
 
 2021-03-03 v1.21
 - Fix bug where second character input by user was being ignored. As of this version, it is no longer ignored.
+- Implement Buckwalter transliteration system (a reversible romanization system for Arabic) (both ways)
